removed padding from weather card to prevent text overflow and added margin to top of airport list drop down

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,3 +104,7 @@ p{
   padding: 5px;
 }
 
+#user-city{
+  margin-bottom: 10px;
+}
+
